--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,25 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+# 编译输出目录
+/build/
+**/build/
+
+# 本地配置
+.gradle/
+local.properties
+
+# IDE 相关
+.idea/
+*.iml
+
+# APK 文件
+*.apk
+
+# 日志文件
+*.log
+
+# Mac/Linux/Windows 系统文件
+.DS_Store
+Thumbs.db
+
+# Gradle 缓存
+.gradle/
+!gradle/wrapper/gradle-wrapper.jar
